# resources/views/emails/application.blade.php
@@ -1,0 +1,16 @@
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Новая заявка</title>
+</head>
+<body>
+<h2>Поступила новая заявка с сайта</h2>
+
+<p><strong>Имя:</strong> {{ $name }}</p>
+<p><strong>Телефон:</strong> {{ $phone }}</p>
+<p><strong>Дата и время:</strong> {{ $received_at }}</p>
+<p><strong>ip:</strong> {{ $ip }}</p>
+
+<p></p>
+</body>
+</html>
